@@ -25,79 +25,159 @@ using System.Net;
 using System.Net.Sockets;
 using System.Text;
 using System.Threading;
+using System.Collections.Generic;
 
 namespace Giver
 {
+	public class SendingHolder
+	{
+		public Service service;
+		public string path;
+		public bool isFile;
+
+		public SendingHolder() {}
+	}
+
 	public class SendingHandler
 	{
+		private System.Object locker;
+		private Queue<SendingHolder> queue;
+		private bool running;
+		private Thread sendingThread;
+		private AutoResetEvent resetEvent;
+
 		public SendingHandler()
 		{
+			resetEvent = new AutoResetEvent(false);
+			running = false;
+			locker = new System.Object();
+			queue = new Queue<SendingHolder> ();
 		}
 
-
-		public void SendFile(Service service, string file)
+		public void Start()
 		{
-			UriBuilder urib = new UriBuilder("http", service.Address.ToString(), (int)service.Port);
-			Logger.Debug("Sending request to URI: {0}", urib.Uri.ToString());
-			System.Net.HttpWebRequest request = (HttpWebRequest) HttpWebRequest.Create(urib.Uri);
+			running = true;
+			sendingThread  = new Thread(SendFileThread);
+			sendingThread.Start();
+		}
 
-			string fileName = System.IO.Path.GetFileName(file);
-			// Send request to send the file
-			request.Method = "POST";
-			request.Headers.Set(Protocol.Request, Protocol.Send);
-			request.Headers.Set(Protocol.Type, "File");
-			request.Headers.Set(Protocol.Count, "1");
-			request.Headers.Set(Protocol.Name, fileName);
-			request.Headers.Set(Protocol.Size, "2034");
-			request.ContentLength = 0;
-			request.GetRequestStream().Close();
+		public void Stop()
+		{
+			running = false;
+			resetEvent.Set();
+		}
 
-			// Read the response to the request
-			HttpWebResponse response = (HttpWebResponse)request.GetResponse();
+		public void QueueFileSend(Service service, string file)
+		{
+			lock(locker) {
+				SendingHolder sh = new SendingHolder();
+				sh.isFile = true;
+				sh.service = service;
+				sh.path = file;
 
-			if( response.StatusCode == HttpStatusCode.OK ) {
-				Logger.Debug("Response was OK");
+				queue.Enqueue(sh);
+			}
+			resetEvent.Set();
+		}
 
-				string sessionID = response.Headers[Protocol.SessionID];
-				response.Close();
-				
-				request = (HttpWebRequest) HttpWebRequest.Create(urib.Uri);
+		private void SendFileThread()
+		{
+			while(running) {
+
+				resetEvent.WaitOne();
+
+				SendingHolder sh = null;
+				resetEvent.Reset();
+
+				lock(locker) {
+					if(queue.Count > 0)
+						sh = queue.Dequeue();
+				}
+
+				// if there was nothing to do, re-loop
+				if(sh == null)
+					continue;
+
+				Service service = sh.service;
+				string file = sh.path;
+
+				UriBuilder urib = new UriBuilder("http", service.Address.ToString(), (int)service.Port);
+				Logger.Debug("Sending request to URI: {0}", urib.Uri.ToString());
+				System.Net.HttpWebRequest request = (HttpWebRequest) HttpWebRequest.Create(urib.Uri);
+
+				string fileName = System.IO.Path.GetFileName(file);
+				// Send request to send the file
 				request.Method = "POST";
-				request.Headers.Set(Protocol.SessionID, sessionID);
-				request.Headers.Set(Protocol.Request, Protocol.Payload);
+				request.Headers.Set(Protocol.Request, Protocol.Send);
+				request.Headers.Set(Protocol.UserName, Environment.UserName);
 				request.Headers.Set(Protocol.Type, "File");
 				request.Headers.Set(Protocol.Count, "1");
 				request.Headers.Set(Protocol.Name, fileName);
+				FileInfo fi = new FileInfo(file);			
+				request.Headers.Set(Protocol.Size, fi.Length.ToString());
+				request.ContentLength = 0;
+				request.GetRequestStream().Close();
 
+				HttpWebResponse response;
+
+				// Read the response to the request
 				try {
-					System.IO.FileStream filestream = new FileStream(file, FileMode.Open);
-					request.ContentLength = filestream.Length;
-					Stream stream = request.GetRequestStream();
-					
-					int sizeRead = 0;
-					int totalRead = 0;
-					byte[] buffer = new byte[2048];
-
-					do {
-						sizeRead = filestream.Read(buffer, 0, 2048);
-						totalRead += sizeRead;
-						if(sizeRead > 0) {
-							stream.Write(buffer, 0, sizeRead);
-						}
-					} while(sizeRead == 2048);
-					Logger.Debug("We Read from the file {0} bytes", totalRead);
-					Logger.Debug("The content length is {0} bytes", filestream.Length);
-
-					stream.Close();
-					filestream.Close();
-				} catch (Exception e) {
-					Logger.Debug("Exception when sending file: {0}", e.Message);
-					Logger.Debug("Exception {0}", e);
+					response = (HttpWebResponse)request.GetResponse();
+				} catch(System.Net.WebException we) {
+					if(we.Response != null)
+						response = (HttpWebResponse)we.Response;
+					else {
+						Logger.Debug("Exception in getting response {0}", we.Message);
+						return;
+					}
 				}
+			
+				Logger.Debug("Response Status code {0}", response.StatusCode);
 
-				// go ahead and send the file			
-			} else {
-				Logger.Debug("Not OKToSend");
+				if( response.StatusCode == HttpStatusCode.OK ) {
+					Logger.Debug("Response was OK");
+
+					string sessionID = response.Headers[Protocol.SessionID];
+					response.Close();
+					
+					request = (HttpWebRequest) HttpWebRequest.Create(urib.Uri);
+					request.Method = "POST";
+					request.Headers.Set(Protocol.SessionID, sessionID);
+					request.Headers.Set(Protocol.Request, Protocol.Payload);
+					request.Headers.Set(Protocol.Type, "File");
+					request.Headers.Set(Protocol.Count, "1");
+					request.Headers.Set(Protocol.Name, fileName);
+
+					try {
+						System.IO.FileStream filestream = new FileStream(file, FileMode.Open);
+						request.ContentLength = filestream.Length;
+						Stream stream = request.GetRequestStream();
+						
+						int sizeRead = 0;
+						int totalRead = 0;
+						byte[] buffer = new byte[2048];
+
+						do {
+							sizeRead = filestream.Read(buffer, 0, 2048);
+							totalRead += sizeRead;
+							if(sizeRead > 0) {
+								stream.Write(buffer, 0, sizeRead);
+							}
+						} while(sizeRead == 2048);
+						Logger.Debug("We Read from the file {0} bytes", totalRead);
+						Logger.Debug("The content length is {0} bytes", filestream.Length);
+
+						stream.Close();
+						filestream.Close();
+					} catch (Exception e) {
+						Logger.Debug("Exception when sending file: {0}", e.Message);
+						Logger.Debug("Exception {0}", e);
+					}			
+				} else {
+					Logger.Debug("Not OKToSend");
+				}
+			
+				Logger.Debug("Done with Sending file");
 			}
 		}
 
